--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 argsVersion=2.33
-foilenLoginApiVersion=master-SNAPSHOT
-foilenInfraApiVersion=master-SNAPSHOT
-foilenInfraPluginVersion=master-SNAPSHOT
-smalltoolsVersion=0.24.0
+foilenLoginApiVersion=0.3.0
+foilenInfraApiVersion=0.3.0
+foilenInfraSystemVersion=0.4.6
+smalltoolsVersion=0.29.0
