Add Bind9 DNS Server

--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ dependencies {
   
   // Resources
   compile "com.foilen:foilen-infra-resource-application:0.1.0"
+  compile "com.foilen:foilen-infra-resource-bind9:0.1.0"
   compile "com.foilen:foilen-infra-resource-dns:0.1.0"
   compile "com.foilen:foilen-infra-resource-domain:0.1.0"
   compile "com.foilen:foilen-infra-resource-infraconfig:0.3.2"
