--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ dependencies {
   compile "com.foilen:foilen-infra-resource-machine:0.1.1"
   compile "com.foilen:foilen-infra-resource-mariadb:0.1.3"
   compile "com.foilen:foilen-infra-resource-unixuser:0.1.3"
+  compile "com.foilen:foilen-infra-resource-urlredirection:0.1.5"
   compile "com.foilen:foilen-infra-resource-webcertificate:0.1.0"
   compile "com.foilen:foilen-infra-resource-website:0.1.3"
 
