--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ repositories {
   mavenLocal()
   jcenter()
   mavenCentral()
+  maven {
+    url 'https://dl.bintray.com/foilen/maven/'
+  }
 }
 
 sourceCompatibility = 1.8
@@ -50,17 +53,8 @@ dependencies {
   compile "com.foilen:foilen-infra-system-core-execute:$foilenInfraSystemVersion"
   
   // Resources
-  compile "com.foilen:foilen-infra-resource-application:0.1.2"
-  compile "com.foilen:foilen-infra-resource-bind9:0.1.2"
-  compile "com.foilen:foilen-infra-resource-dns:0.1.7"
-  compile "com.foilen:foilen-infra-resource-infraconfig:0.3.10"
-  compile "com.foilen:foilen-infra-resource-machine:0.1.1"
-  compile "com.foilen:foilen-infra-resource-mariadb:0.1.4"
-  compile "com.foilen:foilen-infra-resource-unixuser:0.1.6"
-  compile "com.foilen:foilen-infra-resource-urlredirection:0.1.8"
-  compile "com.foilen:foilen-infra-resource-webcertificate:0.1.2"
-  compile "com.foilen:foilen-infra-resource-website:0.1.10"
-
+  compile "com.foilen:foilen-infra-plugins-core:$foilenInfraPluginsCoreVersion"
+  
   // Misc
   compile "args4j:args4j:$argsVersion"
   compile "org.jsoup:jsoup:1.11.3"
