--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,12 @@
+bintrayVersion=1.8.5
+springDependencyManagementVersion=1.0.10.RELEASE
+springBootVersion=2.4.1
+
+foilenInfraApiVersion=0.10.0
+foilenInfraSystemVersion=0.17.0
+foilenInfraPluginsCoreVersion=0.17.0
+
 argsVersion=2.33
 foilenLoginApiVersion=0.3.0
-foilenInfraApiVersion=0.8.0
-foilenInfraSystemVersion=0.14.1
-foilenInfraPluginsCoreVersion=0.14.4
+jsoupVersion=1.13.1
+mongoVersion=4.1.1
