--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 bintrayVersion=1.8.5
 springDependencyManagementVersion=1.0.10.RELEASE
-springBootVersion=2.4.1
+springBootVersion=2.4.2
 
-foilenInfraApiVersion=0.10.0
-foilenInfraSystemVersion=0.17.0
-foilenInfraPluginsCoreVersion=0.17.0
+foilenInfraApiVersion=master-SNAPSHOT
+foilenInfraSystemVersion=master-SNAPSHOT
+foilenInfraPluginsCoreVersion=master-SNAPSHOT
 
 argsVersion=2.33
 foilenLoginApiVersion=0.3.0
