--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,11 @@
-bintrayVersion=1.8.5
 springDependencyManagementVersion=1.0.10.RELEASE
 springBootVersion=2.4.2
 
-foilenInfraApiVersion=master-SNAPSHOT
-foilenInfraSystemVersion=master-SNAPSHOT
-foilenInfraPluginsCoreVersion=master-SNAPSHOT
+foilenInfraApiVersion=0.12.0
+foilenInfraPluginsCoreVersion=0.19.1
+foilenInfraSystemVersion=0.19.0
 
 argsVersion=2.33
-foilenLoginApiVersion=0.3.0
+foilenLoginApiVersion=0.3.3
 jsoupVersion=1.13.1
-mongoVersion=4.1.1
+mongoVersion=4.2.0
